--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,21 +6,74 @@
             <ng-template matStepLabel>Basic Details</ng-template>
             <mat-form-field>
                 <mat-label>First Name</mat-label>
-                <input matInput placeholder="First name" formControlName="firstName" required>
-            </mat-form-field>
+                <input matInput placeholder="please enter the firstname" formControlName="firstName">
+                <mat-error *ngIf="firstFormGroup.controls['firstName'].errors?.required">
+                    First Name is Required!
+                </mat-error>
+                <mat-error *ngIf="firstFormGroup.controls['firstName'].errors?.minlength">
+                    First Name should be atleast 3 characters long!
+                </mat-error>
 
+                <mat-error *ngIf="firstFormGroup.controls['firstName'].errors?.maxlength">
+                    First Name can be at max 16 characters long!
+                </mat-error>
+
+                <mat-error *ngIf="firstFormGroup.controls['firstName'].errors?.pattern">
+                    First Name accepts only alphabets
+                </mat-error>
+            </mat-form-field>
+            <!-- <mat-error *ngIf="firstFormGroup.controls['firstName'].errors?.required">
+                First Name is <strong>required</strong>
+            </mat-error> -->
             <mat-form-field>
                 <mat-label>Last Name</mat-label>
-                <input matInput placeholder="Last name" formControlName="lastName" required>
+                <input matInput placeholder="please enter the lastName" formControlName="lastName">
+                <mat-error *ngIf="firstFormGroup.controls['lastName'].errors?.required">
+                    Last Name is Required!
+                </mat-error>
+                <mat-error *ngIf="firstFormGroup.controls['lastName'].errors?.minlength">
+                    Last Name should be atleast 3 characters long!
+                </mat-error>
+
+                <mat-error *ngIf="firstFormGroup.controls['lastName'].errors?.maxlength">
+                    Last Name can be at max 16 characters long!
+                </mat-error>
+
+                <mat-error *ngIf="firstFormGroup.controls['lastName'].errors?.pattern">
+                    Last Name accepts only alphabets
+                </mat-error>
             </mat-form-field>
+            <!-- <mat-error *ngIf="firstFormGroup.controls['lastName'].errors?.required">
+                Last Name is <strong>required</strong>
+            </mat-error> -->
             <mat-form-field>
                 <mat-label>Email Id</mat-label>
-                <input matInput placeholder="Email" formControlName="email" required>
+                <input type="email" matInput formControlName="email" placeholder="please enter the email">
+                <mat-error *ngIf="firstFormGroup.controls['email'].errors?.required">
+                    Email Id is Required!
+                </mat-error>
+                <mat-error *ngIf="firstFormGroup.controls['email'].errors?.pattern">
+                    Please enter valid email id!
+                </mat-error>
             </mat-form-field>
             <mat-form-field>
                 <mat-label>Contact Number</mat-label>
-                <input matInput placeholder="Contact number" formControlName="contact" required>
+                <input matInput placeholder="please enter the Contact number" formControlName="contact">
+                <mat-error *ngIf="firstFormGroup.controls['contact'].errors?.required">
+                    Contact Number is Required!
+                </mat-error>
+                <mat-error *ngIf="firstFormGroup.controls['contact'].errors?.minlength">
+                    Contact Number should be minimum of 10 digits
+                </mat-error>
+
+                <mat-error *ngIf="firstFormGroup.controls['contact'].errors?.maxlength">
+                    Contact Number should be maximum of 10 digits
+                </mat-error>
+                <mat-error *ngIf="firstFormGroup.controls['contact'].errors?.pattern">
+                    Contact Number must be start with 7,8,9.
+                </mat-error>
             </mat-form-field>
+            <br><br>
             <div>
                 <button mat-raised-button color="warn" matStepperNext>Next</button>
             </div>
@@ -31,18 +84,26 @@
             <ng-template matStepLabel>Password</ng-template>
             <mat-form-field>
                 <mat-label>Password</mat-label>
-                <input matInput formControlName="password" placeholder="password" required>
-                <mat-error *ngIf="secondFormGroup.hasError('required', 'password')">
-                    Please enter your new password
+                <input type="password" matInput formControlName="password" placeholder="enter password">
+                <mat-error *ngIf="secondFormGroup.controls['password'].errors?.required">
+                    please enter the password
+                </mat-error>
+                <mat-error *ngIf="secondFormGroup.controls['password'].errors?.minlength">
+                    password should be minimum of 8 characters
                 </mat-error>
             </mat-form-field>
             <mat-form-field>
                 <mat-label>Confirm Password</mat-label>
-                <input matInput formControlName="confirmPassword" placeholder="confirm password" required>
-                <mat-error *ngIf="secondFormGroup.hasError('notSame')">
-                    Passwords do not match
+                <input type="password" matInput formControlName="confirmPassword" placeholder="confirm password">
+                <mat-error *ngIf="secondFormGroup.controls['confirmPassword'].errors?.required">
+                    please enter the confirmPassword
                 </mat-error>
+                <mat-error *ngIf="secondFormGroup.controls['confirmPassword'].errors?.minlength">
+                    password should be minimum of 8 characters
+                </mat-error>
+                <mat-error *ngIf="secondFormGroup.controls['confirmPassword'].errors?.mustMatch">Passwords don't match</mat-error>
             </mat-form-field>
+
             <div>
                 <button mat-raised-button color="warn" matStepperPrevious>Back</button>
                 <button mat-raised-button color="primary" matStepperNext>Next</button>
